--- a/index.html
+++ b/index.html
@@ -268,12 +268,13 @@ HOME
 </div>
 <div id="b" class="group">
 
-<div class="label"><img src="bulb-icon.png" style="height:17px;"/> Mengpaneel</div>
+<div class="label"><img src="bulb-icon.png" style="height:17px;"/> Muziek</div>
 <div class="buttons">
 <div class="switch on" rel="b=elro&d=31&u=D&s=on">ON <span>.</span></div>
 <div class="switch off" rel="b=elro&d=31&u=D&s=off">OFF <span>.</span></div>
 </div>
 </div>
+
 <div id="b" class="group">
 
 <div class="label"><img src="bulb-icon.png" style="height:17px;"/> PC</div>
