--- a/node/public/index.html
+++ b/node/public/index.html
@@ -17,7 +17,7 @@
 
 $(document).ready(function(){
 
-  var socket = io.connect('http://localhost');
+  var socket = io.connect('http://'+window.location.hostname);
   socket.on('switches', function (data) {
     console.log(data);
     //socket.emit('my other event', { my: 'data' });
