Shadow and white logo

--- a/node/public/index.html
+++ b/node/public/index.html
@@ -89,6 +89,7 @@ $(document).ready(function(){
 	
 	.switch{
 		display: block;
+    box-shadow: inset 0px 0px 10px 0px black;
 	}
 	.switch h1{
 		color:black;
@@ -96,7 +97,9 @@ $(document).ready(function(){
     padding:0;
     text-decoration: none;
 	}
-
+  .navbar-brand{
+    color:white;
+  }
 </style>
 </head>
 <body>
