Lijntje? Geen lijntje!

--- a/node/public/index.html
+++ b/node/public/index.html
@@ -91,6 +91,9 @@ $(document).ready(function(){
 		display: block;
     box-shadow: inset 0px 0px 10px 0px black;
 	}
+  .switch a{
+    text-decoration: none;
+  }
 	.switch h1{
 		color:black;
     margin: 0;
