--- a/node/public/index.html
+++ b/node/public/index.html
@@ -14,90 +14,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
-<script>
-var red = "red", green = "green", orange = "orange";
-$(document).ready(function(){
-
-  var socket = io.connect('http://'+window.location.hostname);
-
-  socket.on('connect', function(){
-
-    $(".connection").html('<i class="glyphicon glyphicon-ok" style="color:'+green+';"></i>');
-
-  });
-
-  socket.on('connecting', function(){
-
-    $(".connection").html('<i class="glyphicon glyphicon-minus"></i>');
-
-  });
-
-  socket.on('connect_failed', function(){
-
-    $(".connection").html('<i class="glyphicon glyphicon-remove" style="color:'+red+';"></i>');
-
-  });
-  
-  socket.on('disconnect', function(){
-
-    $(".connection").html('<i class="glyphicon glyphicon-remove" style="color:'+red+';"></i>');
-
-  });
-
-
-  socket.on('switches', function (data) {
-    console.log(data);
-    //socket.emit('my other event', { my: 'data' });
-    var html = "";
-    $.each(data, function(x,y){
-    	var color = red;
-	  	if(y.state === 1){
-	  		color = green;
-	  	}
-
-    	html +='<a class="switch well" id="switch-'+x+'" style="background:'+color+'"><h1><span class="'+y.icon+'"></span> '+y.name+'</h1></a>';
-    });
-
-    $(".switches").html(html);
-
-    $(".switch").each(function(){
-    	$(this).click(function(e){
-    		e.preventDefault();
-        $(this).css({"background":orange});
-    		socket.emit("switch", {id:$(this).attr("id").replace("switch-", "")});
-    	});
-    });
-
-
-
-  });
-
-  socket.on("switched", function(data){
-
-  	var color = red;
-  	if(data.switch.state === 1){
-  		color = green;
-  	}
-
-  	$("#switch-"+data.id).css({"background":color});
-
-  });
-
-
-  socket.on("state", function(data){
-
-   if(data.ssh){
-
-    $(".ssh").html('<i class="glyphicon glyphicon-ok" style="color:'+green+';"></i>');
-
-   }else{
-    $(".ssh").html('<i class="glyphicon glyphicon-remove" style="color:'+red+';"></i>');
-   }
-
-  });
-
-  });
-</script>
+<script src="home.js"></script>
 <style>
 	
 	.switch{
@@ -129,11 +46,11 @@ $(document).ready(function(){
           <a class="navbar-brand" href="#">Home <span class="connection"></span><span class="ssh"></span></a>
         </div>
         <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
+          <!--ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
-          </ul>
+          </ul-->
         </div><!--/.nav-collapse -->
       </div>
     </div>
