--- a/node/public/index.html
+++ b/node/public/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-
+<title>Home! - Tomas Harkema</title>
 <script src="/socket.io/socket.io.js"></script>
 
 <!-- Latest compiled and minified CSS -->
