--- a/node/public/index.html
+++ b/node/public/index.html
@@ -33,7 +33,7 @@
   }
 </style>
 </head>
-<body>
+<body style="margin-top:65px;">
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
