--- a/node/public/index.html
+++ b/node/public/index.html
@@ -16,7 +16,12 @@
 
 <script src="home.js"></script>
 <style>
-	
+	body{
+    background-color: black;
+  }
+  .well{
+    border:none;
+  }
 	.switch{
 		display: block;
     box-shadow: inset 0px 0px 10px 0px black;
@@ -27,6 +32,9 @@
     box-shadow: inset 0px 0px 10px 0px black;
     text-decoration: none;
     padding:5px;
+    padding-left:10px;
+    padding-right:10px;
+    margin-right: 10px;
   }
 	.switch h1, .device h1{
 		color:black;
