--- a/node/public/index.html
+++ b/node/public/index.html
@@ -16,7 +16,13 @@
 
 <script src="home.js"></script>
 <style>
-	
+	body{
+    background-color: black;
+  }
+  .well{
+    border:none;
+  }
+
 	.switch{
 		display: block;
     box-shadow: inset 0px 0px 10px 0px black;
