--- a/node/public/index.html
+++ b/node/public/index.html
@@ -33,6 +33,9 @@
     box-shadow: inset 0px 0px 10px 0px black;
     text-decoration: none;
     padding:5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-right: 10px;
   }
 	.switch h1, .device h1{
 		color:black;
