--- a/node/public/index.html
+++ b/node/public/index.html
@@ -96,6 +96,8 @@
       </div>
     </div>
 		<div class="container">
+      <h3>Clients</h3>
+      <div class="clients set"></div>
       <h3>Devices</h3>
       <div class="devices set"></div>
       <h3>Switches</h3>
