Add log function

--- a/node/public/index.html
+++ b/node/public/index.html
@@ -69,7 +69,7 @@
     background-color: #222;
     padding:10px;
   }
-  h3{
+  h3, h4{
     color:white;
   }
 </style>
@@ -102,6 +102,8 @@
 			<div class="devices set"></div>
       <h3>Clients</h3>
       <div class="clients set"></div>
+      <h4>Log:</h4>
+      <div class="log set"></div>
 		</div>
 </body>
 </html>
