--- a/node/public/index.html
+++ b/node/public/index.html
@@ -72,6 +72,9 @@
   h3, h4{
     color:white;
   }
+  .log{
+    color: white;
+  }
 </style>
 </head>
 <body style="margin-top:65px;">
@@ -103,7 +106,7 @@
       <h3>Clients</h3>
       <div class="clients set"></div>
       <h4>Log:</h4>
-      <div class="log set"></div>
+      <code class="log set"></code>
 		</div>
 </body>
 </html>
