--- a/node/public/index.html
+++ b/node/public/index.html
@@ -15,70 +15,7 @@
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 
 <script src="home.js"></script>
-<style>
-	body{
-    background-color: black;
-  }
-  .well{
-    border:none;
-  }
-	.switch{
-		display: block;
-    box-shadow: inset 0px 0px 10px 0px black;
-    text-decoration: none;
-    padding:5px;
-  }
-  .device{
-    display: inline-block;
-    box-shadow: inset 0px 0px 10px 0px black;
-    text-decoration: none;
-    padding:5px;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-right: 10px;
-    margin-bottom: 5px;
-  }
-	.switch h3, .device span{
-		color:black;
-    margin: 0;
-    padding:0;
-    text-decoration: none;
-	}
-  .navbar-brand{
-    color:white;
-  }
-  hr{
-    margin-top: 0px;
-  }
-  .panel{
-    background-color: #222;
-  }
-  .panel-default{
-    border:none!important;
-  }
-  .switches .well:last-child{
-    margin-bottom: 0px;
-  }
-  .devices .well:last-child{
-    margin-bottom: 0px;
-  }
-  .switches .col-md-3{
-    margin-bottom: 10px;
-  }
-  .set{
-    background-color: #222;
-    padding:10px;
-  }
-  h3, h4{
-    color:white;
-  }
-  .log{
-    color: white;
-  }
-  code{
-    width:100%;
-  }
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body style="margin-top:65px;">
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
