--- a/node/public/index.html
+++ b/node/public/index.html
@@ -39,6 +39,13 @@
       </div>
     </div>
 		<div class="container">
+      <div class="set misc">
+        <div class="row">
+          <div class="col-md-3">
+            <span class="device well" id="device-0" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> <span class="temp"></span> C</span>
+          </div>
+        </div>
+      </div>
       <h3>Switches</h3>
       <div class="switches set"></div>
       <h3>Devices</h3>     
