May manual refresh ssh

--- a/node/public/index.html
+++ b/node/public/index.html
@@ -27,7 +27,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Home <span class="connection"></span><span class="ssh"></span></a>
+          <a class="navbar-brand refresh" href="#">Home <span class="connection"></span><span class="ssh"></span></a>
         </div>
         <div class="collapse navbar-collapse">
           <!--ul class="nav navbar-nav">
