--- a/node/public/index.html
+++ b/node/public/index.html
@@ -42,7 +42,7 @@
       <div class="set misc">
         <div class="row">
           <div class="col-md-3">
-            <span class="temp well" id="misc-0" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> <span class="temp"></span> C</span>
+            <span class="tempwrap well" id="misc-0" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> <span class="temp"></span> C</span>
 
             <a class="alarm well" id="misc-1" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> Alarm</a>
 
