--- a/node/public/index.html
+++ b/node/public/index.html
@@ -13,7 +13,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <!-- Latest compiled and minified JavaScript -->
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-
+<script src="jquery.timeago.js" type="text/javascript"></script>
 <script src="home.js"></script>
 <link rel="stylesheet" href="style.css">
 </head>
