--- a/node/public/index.html
+++ b/node/public/index.html
@@ -16,6 +16,7 @@
 <script src="jquery.timeago.js" type="text/javascript"></script>
 <script src="jquery.flot.js" type="text/javascript"></script>
 <script src="jquery.flot.time.js" type="text/javascript"></script>
+<script src="jquery.flot.resize.js" type="text/javascript"></script>
 
 <script src="home.js"></script>
 <link rel="stylesheet" href="style.css">
