--- a/node/public/index.html
+++ b/node/public/index.html
@@ -46,9 +46,9 @@
       <div class="set misc">
         <div class="row">
           <div class="col-md-3">
-            <span class="tempwrap well" id="misc-0" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> <span class="temp"></span> C</span>
+            <span class="tempwrap well" id="misc-0" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> <span class="temp"></span> &deg;C</span>
 
-            <span class="tempwrap well" id="misc-3" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> <span class="lightsLume"></span></span>
+            <span class="tempwrap well" id="misc-3" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-fire"></span> <span class="lightsLume"></span> L</span>
             
 
             <a class="alarm well" id="misc-1" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> Alarm</a>
