--- a/node/public/index.html
+++ b/node/public/index.html
@@ -66,6 +66,8 @@
       <div class="clients set"></div>
       <h3>Temp plot</h3>
       <div id="plot" style="width:100%;height:300px;"></div>
+      <h3>Lights plot</h3>
+      <div id="lLights" style="width:100%;height:300px;"></div>
       <h3>His plot</h3>
       <div id="his" style="width:100%;height:300px;"></div>
       <h4>Log:</h4>
