--- a/node/public/index.html
+++ b/node/public/index.html
@@ -1,25 +1,28 @@
-<html>
+<html manifest="application.manifest">
 <head>
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="/js/jquery-1.11.0.min.js"></script>
 <title>Home! - Tomas Harkema</title>
-<script src="/socket.io/socket.io.js"></script>
+
+<script src="/js/socket.io.js"></script>
 
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/bootstrap.min.css">
 
-<!-- Optional theme -->
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes"/>
 <!-- Latest compiled and minified JavaScript -->
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-<script src="jquery.timeago.js" type="text/javascript"></script>
-<script src="jquery.flot.js" type="text/javascript"></script>
-<script src="jquery.flot.time.js" type="text/javascript"></script>
-<script src="jquery.flot.resize.js" type="text/javascript"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/jquery.timeago.js" type="text/javascript"></script>
+<script src="/js/jquery.flot.js" type="text/javascript"></script>
+<script src="/js/jquery.flot.time.js" type="text/javascript"></script>
+<script src="/js/jquery.flot.resize.js" type="text/javascript"></script>
 
-<script src="home.js"></script>
-<link rel="stylesheet" href="style.css">
+
+<script src="/js/home.js"></script>
+<link rel="stylesheet" href="/css/style.css">
+
+<link rel="apple-touch-icon" href="/img/icon.png">
+
 </head>
 <body style="margin-top:65px;">
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
