--- a/node/public/index.html
+++ b/node/public/index.html
@@ -73,6 +73,20 @@
       <div id="lLights" style="width:100%;height:300px;"></div>
       <h3>His plot</h3>
       <div id="his" style="width:100%;height:300px;"></div>
+
+      <select id="bounds" class="form-control">
+        <option>-1</option>
+        <option>-2</option>
+        <option>-6</option>
+        <option>-8</option>
+        <option>-10</option>
+        <option>-12</option>
+        <option>-14</option>
+        <option>-16</option>
+        <option>-18</option>
+        <option selected>-20</option>
+      </select>
+
       <h4>Log:</h4>
       <code class="log set"></code>
 
