--- a/node/public/index.html
+++ b/node/public/index.html
@@ -85,6 +85,11 @@
         <option>-16</option>
         <option>-18</option>
         <option selected>-20</option>
+        <option>-22</option>
+        <option>-24</option>
+        <option>-48</option>
+        <option>-72</option>
+        <option>-96</option>
       </select>
 
       <h4>Log:</h4>
