--- a/node/public/index.html
+++ b/node/public/index.html
@@ -75,6 +75,8 @@
       <div id="his" style="width:100%;height:300px;"></div>
 
       <select id="bounds" class="form-control">
+        <option>-0.2</option>
+        <option>-0.5</option>
         <option>-1</option>
         <option>-2</option>
         <option>-6</option>
