--- a/node/public/index.html
+++ b/node/public/index.html
@@ -37,15 +37,15 @@
           <a class="navbar-brand refresh" href="#">Home <span class="connection"></span><span class="ssh"></span></a>
         </div>
         <div class="collapse navbar-collapse">
-          <!--ul class="nav navbar-nav">
+          <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#config">Config</a></li>
           </ul-->
-        </div><!--/.nav-collapse -->
+        </div><!--/.nav-collapse-->
       </div>
     </div>
 		<div class="container">
+      <div class="page" id="home">
       <div class="set misc">
         <div class="row">
           <div class="col-md-3">
@@ -97,8 +97,14 @@
       <h4>Log:</h4>
       <code class="log set"></code>
 
-      
-
+      </div>
+      <div class="page" id="config">
+        <h1>Config</h1>
+        <form id="configForm">
+        <div class="configs"></div>
+        <input type="submit" value="Submit"/>
+        </form>
+      </div>
 		</div>
 </body>
 </html>
