--- a/node/public/index.html
+++ b/node/public/index.html
@@ -1,110 +1,118 @@
 <html manifest="application.manifest">
-<head>
-<script src="/js/jquery-1.11.0.min.js"></script>
-<title>Home! - Tomas Harkema</title>
+  <head>
+    <!--
+      Well, hello fellow inspect elementer!
 
-<script src="/js/socket.io.js"></script>
+      I see you are nosing through my code! I think I have a better idea, go visit my git repository and see all the source magic happen there! https://git.tomasharkema.nl/root/raspberrypi/tree/master/node
 
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="/css/bootstrap.min.css">
+      Oh yes, the SLL isn't save, but don't worry! I solemnly swear I am doing everything to keep you save and secure!
 
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<meta name="apple-mobile-web-app-capable" content="yes"/>
-<!-- Latest compiled and minified JavaScript -->
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/jquery.timeago.js" type="text/javascript"></script>
-<script src="/js/jquery.flot.js" type="text/javascript"></script>
-<script src="/js/jquery.flot.time.js" type="text/javascript"></script>
-<script src="/js/jquery.flot.resize.js" type="text/javascript"></script>
+    -->
+    <script src="/js/jquery-1.11.0.min.js"></script>
+    <title>Home! - Tomas Harkema</title>
+
+    <script src="/js/socket.io.js"></script>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <link rel="apple-touch-icon" href="/img/icon.png">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery.timeago.js" type="text/javascript"></script>
+    <script src="/js/jquery.flot.js" type="text/javascript"></script>
+    <script src="/js/jquery.flot.time.js" type="text/javascript"></script>
+    <script src="/js/jquery.flot.resize.js" type="text/javascript"></script>
 
 
-<script src="/js/home.js"></script>
-<link rel="stylesheet" href="/css/style.css">
+    <script src="/js/home.js"></script>
+    <link rel="stylesheet" href="/css/style.css">
 
-<link rel="apple-touch-icon" href="/img/icon.png">
-
-</head>
-<body style="margin-top:65px;">
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand refresh" href="#">Home <span class="connection"></span><span class="ssh"></span></a>
+  </head>
+  <body style="margin-top:65px;">
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand refresh" href="#">Home <span class="connection"></span><span class="ssh"></span></a>
+          </div>
+          <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#config">Config</a></li>
+            </ul-->
+          </div><!--/.nav-collapse-->
         </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#config">Config</a></li>
-          </ul-->
-        </div><!--/.nav-collapse-->
       </div>
-    </div>
-		<div class="container">
-      <div class="page" id="home">
-      <div class="set misc">
-        <div class="row">
-          <div class="col-md-3">
-            <span class="tempwrap well" id="misc-0" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> <span class="temp"></span> &deg;C</span>
+  		<div class="container">
+        <div class="page" id="home">
+        <div class="set misc">
+          <div class="row">
+            <div class="col-md-3">
+              <span class="tempwrap well" id="misc-0" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> <span class="temp"></span> &deg;C</span>
 
-            <span class="tempwrap well" id="misc-3" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-fire"></span> <span class="lightsLume"></span> L</span>
-            
+              <span class="tempwrap well" id="misc-3" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-fire"></span> <span class="lightsLume"></span> L</span>
+              
 
-            <a class="alarm well" id="misc-1" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> Alarm</a>
+              <a class="alarm well" id="misc-1" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> Alarm</a>
 
-            <a class="trigger well" id="misc-2" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> Trigger</a>
+              <a class="trigger well" id="misc-2" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> Trigger</a>
 
+            </div>
           </div>
         </div>
-      </div>
-      <h3>Switches</h3>
-      <div class="switches set"></div>
-      <h3>Devices</h3>     
-			<div class="devices set"></div>
-      <h3>Clients</h3>
-      <div class="clients set"></div>
-      <h3>Temp plot</h3>
-      <div id="plot" style="width:100%;height:300px;"></div>
-      <h3>Lights plot</h3>
-      <div id="lLights" style="width:100%;height:300px;"></div>
-      <h3>His plot</h3>
-      <div id="his" style="width:100%;height:300px;"></div>
+        <h3>Switches</h3>
+        <div class="switches set"></div>
+        <h3>Devices</h3>     
+  			<div class="devices set"></div>
+        <h3>Clients</h3>
+        <div class="clients set"></div>
+        <h3>Temp plot</h3>
+        <div id="plot" style="width:100%;height:300px;"></div>
+        <h3>Lights plot</h3>
+        <div id="lLights" style="width:100%;height:300px;"></div>
+        <h3>His plot</h3>
+        <div id="his" style="width:100%;height:300px;"></div>
 
-      <select id="bounds" class="form-control">
-        <option>-0.2</option>
-        <option>-0.5</option>
-        <option>-1</option>
-        <option>-2</option>
-        <option>-6</option>
-        <option>-8</option>
-        <option>-10</option>
-        <option>-12</option>
-        <option>-14</option>
-        <option>-16</option>
-        <option>-18</option>
-        <option selected>-20</option>
-        <option>-22</option>
-        <option>-24</option>
-        <option>-48</option>
-        <option>-72</option>
-        <option>-96</option>
-      </select>
+        <select id="bounds" class="form-control">
+          <option>-0.2</option>
+          <option>-0.5</option>
+          <option>-1</option>
+          <option>-2</option>
+          <option>-6</option>
+          <option>-8</option>
+          <option>-10</option>
+          <option>-12</option>
+          <option>-14</option>
+          <option>-16</option>
+          <option>-18</option>
+          <option selected>-20</option>
+          <option>-22</option>
+          <option>-24</option>
+          <option>-48</option>
+          <option>-72</option>
+          <option>-96</option>
+        </select>
 
-      <h4>Log:</h4>
-      <code class="log set"></code>
+        <h4>Log:</h4>
+        <code class="log set"></code>
 
-      </div>
-      <div class="page" id="config">
-        <h1>Config</h1>
-        <form id="configForm">
-        <div class="configs"></div>
-        <input type="submit" value="Submit"/>
-        </form>
-      </div>
-		</div>
-</body>
+        </div>
+        <div class="page" id="config">
+          <h1>Config</h1>
+          <form id="configForm">
+          <div class="configs"></div>
+          <input type="submit" value="Submit"/>
+          </form>
+        </div>
+  		</div>
+  </body>
 </html>
