Show sleep state

--- a/node/public/index.html
+++ b/node/public/index.html
@@ -54,6 +54,11 @@
       </div>
   		<div class="container">
         <div class="page" id="home">
+
+        <div class="well" id="sleepStatus">
+
+        </div>
+
         <div class="set misc">
           <div class="row">
             <div class="col-md-3">
