--- a/node/public/index.html
+++ b/node/public/index.html
@@ -56,7 +56,9 @@
         <div class="page" id="home">
 
         <div class="well" id="sleepStatus">
+        <div class="time">
 
+        </div>
         </div>
 
         <div class="set misc">
