--- a/node/public/index.html
+++ b/node/public/index.html
@@ -82,6 +82,8 @@
   			<div class="devices set"></div>
         <h3>Clients</h3>
         <div class="clients set"></div>
+        <h3>Slaap patroon</h3>
+        <div class="sleep set"></div>
         <h3>Temp plot</h3>
         <div id="plot" style="width:100%;height:300px;"></div>
         <h3>Lights plot</h3>
