--- a/node/public/index.html
+++ b/node/public/index.html
@@ -26,11 +26,11 @@
     <script src="/js/jquery.flot.js" type="text/javascript"></script>
     <script src="/js/jquery.flot.time.js" type="text/javascript"></script>
     <script src="/js/jquery.flot.resize.js" type="text/javascript"></script>
-
+    <script src="/js/fullcalendar.min.js" type="text/javascript"></script>
 
     <script src="/js/home.js"></script>
     <link rel="stylesheet" href="/css/style.css">
-
+    <link rel="stylesheet" href="/css/fullcalendar.css">
   </head>
   <body style="margin-top:65px;">
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -110,7 +110,7 @@
           <option>-72</option>
           <option>-96</option>
         </select>
-
+        <div id="calendar"></div>
         <h4>Log:</h4>
         <code class="log set"></code>
 
