--- a/node/public/index.html
+++ b/node/public/index.html
@@ -62,8 +62,6 @@
         </div>
 
         <div class="set misc">
-          <div class="row">
-            <div class="col-md-3">
               <span class="tempwrap well" id="misc-0" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> <span class="temp"></span> &deg;C</span>
 
               <span class="tempwrap well" id="misc-3" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-fire"></span> <span class="lightsLume"></span> L</span>
@@ -73,8 +71,9 @@
 
               <a class="trigger well" id="misc-2" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> Trigger</a>
 
-            </div>
-          </div>
+              <a class="cpu well" id="misc-cpu" style="background:rgb(27,242,0)"></a>
+              <a class="mem well" id="misc-cpu" style="background:rgb(27,242,0)"></a>
+
         </div>
         <h3>Switches</h3>
         <div class="switches set"></div>
