--- a/node/public/index.html
+++ b/node/public/index.html
@@ -87,8 +87,8 @@
         <div id="plot" style="width:100%;height:300px;"></div>
         <h3>Lights plot</h3>
         <div id="lLights" style="width:100%;height:300px;"></div>
-        <h3>His plot</h3>
-        <div id="his" style="width:100%;height:300px;"></div>
+        <h3>CPU plot</h3>
+        <div id="cpu" style="width:100%;height:300px;"></div>
 
         <select id="bounds" class="form-control">
           <option>-0.2</option>
