--- a/node/public/index.html
+++ b/node/public/index.html
@@ -27,7 +27,8 @@
     <script src="/js/jquery.flot.time.js" type="text/javascript"></script>
     <script src="/js/jquery.flot.resize.js" type="text/javascript"></script>
     <script src="/js/fullcalendar.min.js" type="text/javascript"></script>
-
+    <script src="/js/date.js" type="text/javascript"></script>
+    
     <script src="/js/home.js"></script>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/fullcalendar.css">
