--- a/node/public/index.html
+++ b/node/public/index.html
@@ -63,11 +63,11 @@
         </div>
 
         <div class="set misc">
-              <span class="tempwrap well" id="misc-0" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> <span class="temp"></span> &deg;C</span>
+              <span class="tempwrap well" id="misc-0" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> <span class="temp">0</span> &deg;C</span>
 
               <span class="tempwrap well" id="misc-3" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-fire"></span> <span class="lightsLume"></span> L</span>
-              <a class="cpu well" id="misc-cpu" style="background:rgb(27,242,0)"></a>
-              <a class="mem well" id="misc-cpu" style="background:rgb(27,242,0)"></a>
+              <a class="cpu well" id="misc-cpu" style="background:rgb(27,242,0)">CPU: 0</a>
+              <a class="mem well" id="misc-cpu" style="background:rgb(27,242,0)">Mem: 0%</a>
 
               <a class="alarm well" id="misc-1" style="background:rgb(27,242,0)"><span class="glyphicon glyphicon-cloud"></span> Alarm</a>
 
