--- a/node/public/index.html
+++ b/node/public/index.html
@@ -111,8 +111,9 @@
           <option>-96</option>
         </select>
         <div id="calendar"></div>
+        <div id="calendar2"></div>
         <h4>Log:</h4>
-        <code class="log set"></code>
+        <code class="log set hidden-xs"></code>
 
         </div>
         <div class="page" id="config">
