Sleep standard hidden

--- a/node/public/index.html
+++ b/node/public/index.html
@@ -56,7 +56,7 @@
   		<div class="container">
         <div class="page" id="home">
 
-        <div class="well" id="sleepStatus">
+        <div class="well" id="sleepStatus" style="display:hidden;">
         <div class="time">
 
         </div>
