--- a/node/public/index.html
+++ b/node/public/index.html
@@ -122,6 +122,7 @@
           <input type="submit" value="Submit"/>
           </form>
         </div>
+        <a href='https://gemnasium.com/5ef54a8bdd821807800ba01809099fc8'><img src="https://gemnasium.com/59f0dbc96309409f943855d3ac366cdc.svg" alt="Dependency Status" /></a>
   		</div>
   </body>
 </html>
